feat: Added Scipy library. Updated settings, so it doesn't show inline suggestions

--- a/2024/.vscode/settings.json
+++ b/2024/.vscode/settings.json
@@ -10,5 +10,6 @@
     ],
     "python.testing.pytestEnabled": false,
     "python.testing.unittestEnabled": true,
-    "python.linting.enabled": true
+    "python.linting.enabled": true,
+    "inlineChat.lineNaturalLanguageHint": false // Experimental feature: Disable inline hint to use copilot when writing comments.
 }
